--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
     <meta name='generator' content={Astro.generator} />
     <meta
       name='description'
-      content='Dark themed website template built on AstroJS, designed for technological startup business.'
+      content='Week of Engineering adalah event tahunan yang diadakan oleh Badan Eksekutif Mahasiswa Fakultas Teknik UMPO'
     />
     <title>{title}</title>
   </head>
