Add partners component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import { Navbar } from '../components/Navbar.jsx';
 import { Features1 } from '../components/Features1.jsx';
 import { FeaturesDiagonal } from '../components/FeaturesDiagonal.jsx';
 import { Brands } from '../components/Brands.jsx';
+import { Partners } from '../components/Partners.jsx';
 import { Footer } from '../components/Footer.jsx';
 import { ScrollUpButton } from '../components/ScrollUpButton';
 import '../styles/Theme.css';
@@ -17,6 +18,7 @@ import '../styles/Diagonals.css';
   <Features1 client:load />
   <FeaturesDiagonal client:load />
   <Brands client:load />
+  <Partners client:load />
   <Footer />
   <ScrollUpButton client:load />
 </Layout>
