Update Brands, Sponsors, and Media Partners logo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import { Features1 } from '../components/Features1.jsx';
 import { FeaturesDiagonal } from '../components/FeaturesDiagonal.jsx';
 import { Brands } from '../components/Brands.jsx';
 import { Partners } from '../components/Partners.jsx';
+import { Sponsor } from '../components/Sponsor.jsx';
 import { Footer } from '../components/Footer.jsx';
 import { ScrollUpButton } from '../components/ScrollUpButton';
 import '../styles/Theme.css';
@@ -18,6 +19,7 @@ import '../styles/Diagonals.css';
   <Features1 client:load />
   <FeaturesDiagonal client:load />
   <Brands client:load />
+  <Sponsor client:load />
   <Partners client:load />
   <Footer />
   <ScrollUpButton client:load />
