Implement changes for WOE 24

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import '../styles/Theme.css';
 import '../styles/Diagonals.css';
 ---
 
-<Layout title='Week of Engineering | BEMFT UMPO'>
+<Layout title='Week of Engineering 2024 | BEMFT UMPO'>
   <Navbar client:load />
   <Hero client:load />
   <Features1 client:load />
